# delete-workflow-runs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  action.yaml  pyproject.toml  setup.cfg
.github/workflows/: cd-production.yaml  cd-staging.yaml  ci.yaml  cron-tasks.yaml  reusable-build-test.yaml  reusable-codeql.yaml  reusable-pre-commit.yaml
badges/: coverage.json  marketplace.json
src/delete_workflow_runs/: run.py
tests/: test_run.py
