[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "delete-workflow-runs"
version = "1.1.18"

readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "developers", email = "developers@tagdots.com" },
]
requires-python = ">=3.12.10"

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

dependencies = [
  "click==8.2.1",
  "click-option-group==0.5.7",
  "gitpython==3.1.45",
  "pandas==2.3.1",
  "progress==1.6.1",
  "pygithub==2.7.0",
  "rich==14.1.0",
  "setuptools==80.9.0",
  "virtualenv==20.34.0",
]

optional-dependencies.test = [
  "build",
  "commitizen",
  "coverage",
  "flake8",
  "isort",
  "pre-commit",
  "pyscan-rs",
  "pytest",
  "twine",
]

urls.Changelog = "https://github.com/tagdots/delete-workflow-runs/blob/main/CHANGELOG.md"
urls.Documentation = "https://github.com/tagdots/delete-workflow-runs/blob/main/README.md"
urls.Homepage = "https://github.com/tagdots"
urls.Issues = "https://github.com/tagdots/delete-workflow-runs/issues"
urls.Repository = "https://github.com/tagdots/delete-workflow-runs"

scripts.delete-workflow-runs = "delete_workflow_runs.run:main"

[dependency-groups]
test = [
  "coverage[toml]",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.dynamic]
version = { attr = "src.delete_workflow_runs.__init__" }

[tool.pyproject-fmt]
column_width = 125
indent = 2
keep_full_version = true

[tool.coverage]
source = [ "." ]

[tool.coverage.run]
branch = true
command_line = "-m pytest -vs tests/"
include = [ "src/delete_workflow_runs/*" ]
omit = [ "tests/*" ]

[tool.coverage.report]
fail_under = 80
show_missing = false
include = [ "src/delete_workflow_runs/*" ]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = false
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
  "src/delete_workflow_runs/__init__.py:__version__",
]
version_provider = "pep621"
version_scheme = "pep440"
