[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "delete-workflow-runs"
version = "1.2.33"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "developers", email = "developers@tagdots.com" },
]
requires-python = ">=3.12.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "click==8.4.2",
  "pandas==3.0.3",
  "pygithub==2.9.1",
  "rich==15.0.0",
]
optional-dependencies.local = [
  "commitizen",
  "pre-commit",
]
optional-dependencies.test = [
  "build",
  "coverage",
  "flake8",
  "isort",
  "pyscan-rs",
  "pytest",
  "twine",
]
urls.Changelog = "https://github.com/tagdots/delete-workflow-runs/blob/main/CHANGELOG.md"
urls.Documentation = "https://github.com/tagdots/delete-workflow-runs/blob/main/README.md"
urls.Homepage = "https://github.com/tagdots"
urls.Issues = "https://github.com/tagdots/delete-workflow-runs/issues"
urls.Repository = "https://github.com/tagdots/delete-workflow-runs"
scripts.delete-workflow-runs = "delete_workflow_runs.run:main"

[dependency-groups]
test = [
  "coverage[toml]",
]

[tool.setuptools]
packages.find.where = [ "src" ]
dynamic.version = { attr = "src.delete_workflow_runs.__init__" }

[tool.pyproject-fmt]
column_width = 125
indent = 2
keep_full_version = true

[tool.coverage]
run.branch = true
run.command_line = "-m pytest -vs tests/"
run.include = [ "src/delete_workflow_runs/*" ]
run.omit = [ "tests/*" ]
report.fail_under = 80
report.include = [ "src/delete_workflow_runs/*" ]
report.show_missing = false
source = [ "." ]

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "pep621"
version_files = [
  "src/delete_workflow_runs/__init__.py:__version__",
]
major_version_zero = false
tag_format = "$version"
update_changelog_on_bump = true
